Added a command to manually reload the rocode extension   main.py    - Added reload command, using code from my discord.py bot template.    - Changed the on_ready event to use a format string (oops)    - Added a check_owner function to only allow myself to call the reload command    - Added an owner attribute to the config file    - Improved file handling   rocode.py    - Changed the test channel    - Added cog_unload method to safely unload the cog    - Moved the 403 exception above the general http exception    - Changed the test channel id    - Added teardown function to make sure the extension gets reloaded properly   sample_config.json    - Added owner attribute

--- a/sample_config.json
+++ b/sample_config.json
@@ -4,5 +4,6 @@
  "rocode_hour": "0",
  "rocode_minute": "0",
   "epoch": "00 00 30 January 2021",
- "timezone": "Canada/Pacific"
- }
+ "timezone": "Canada/Pacific",
+ "owner": "123456789012345678"
+}
