Update to use discord.py v2.2.2, add event threads   main.py     - Add check for existence of ./persistent/events.json, and create it if it doesn't     - Add intents object to comply with discord API changes     - Move extension loading into on_ready() because load_extension is now asynchronous     - Remove reload command because we don't update the codes very often anyway     - Add event_threads extension
  rocode.py
    - Move ./codes/codes.txt to ./codes.txt
    - Make setup() and teardown() asynchronous

  event_threads.py
    - Created file for new extension
    - Listens for the creation of scheduled events and creates a forum post for each new event
    - Automatically updates event forum posts when the event is updated

  Dockerfile
    - Update to python3.10
    - Add volume for ./persistent to persist events.json across restarts

  codes.txt
    - Move from /codes/codes.txt to /codes.txt

  .gitignore
    - Ignore persistent/events.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Don't include our config file lol
+# Don't include our config or events file lol
 config.json
+persistent/events.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
